am adaugat o linie plutitoare

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <h1>O linie nous</h1>
         <h1>A doua linie</h1>
         <h1>A 3-a linie</h1>
+        
+        <h1>O linie plutitoare</h>
     </div>
 </body>
 </html>
